js test config clear

--- a/src/components/user-info/user-info.html
+++ b/src/components/user-info/user-info.html
@@ -1,6 +1,3 @@
-
-
-
 <div id="user-info">
     
 	<h2>user-info</h2>
@@ -17,7 +14,7 @@
 
 	<div>
 		<lable for="city">City</lable>
-		<input type="text" id="city" data-bind="value:city"/>
+		<input type="text" id="city" data-bind="value:city" data-max="3"/>
 	</div>
 	
 	<br/>
